src/routes/game/components/elements/cardDisplay/CardDisplay.module.css
.card {
  border-radius: 10px;
  object-fit: cover;
  position: relative;
  user-select: none;
  -webkit-user-select: none;
  overflow: visible;
  height: 100%;
  width: 100%;
  aspect-ratio: 1;
}

.normalSize {
  max-height: var(--card-size);
  max-width: var(--card-size);
}

.floatTint {
  position: absolute;
  left: 0px;
  top: 0px;
  right: 0px;
  bottom: 0px;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1;
  border-radius: 0.5em;
  border-radius: 7%;
}

.text {
  color: black;
}

.img {
  position: absolute;
  left: 0px;
  top: 0px;
  right: 0px;
  bottom: 0px;
  object-fit: cover;
  height: 100%;
  border-radius: 15px;
  border-radius: 7%;
  max-height: 100%;
  max-width: 100%;
  transition: box-shadow 0.25s, border-color 0.25s;
  -webkit-user-drag: none;
  -khtml-user-drag: none;
  -moz-user-drag: none;
  -o-user-drag: none;
}

.disabled {
  background-color: black;
  opacity: 0.5;
  position: absolute;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
}

.isBroken {
  background-image: url('../../../../../img/symbols/symbol-brokenEquip.png');
  background-repeat: no-repeat;
  background-size: contain;
  background-position: 1.5vh -0.5vh;
  position: absolute;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
}

.onChain {
  background-image: url('../../../../../img/symbols/symbol-onChain.png');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 0px -5vh;
}

.isFrozen {
  background-image: url('../../../../../img/elements/frozenOverlay.png');
  background-repeat: no-repeat;
  background-size: 100% 100%;
}

.marked {
  background-image: url('../../../../../img/elements/markedOverlay.png');
  background-repeat: no-repeat;
  background-size: 100% 100%;
  opacity: 0.7;
}

.tapped {
  transform: rotate(90deg);
  background-color: black;
  opacity: 0.5;
  position: absolute;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
}

.numUses {
  position: absolute;
  top: 8px;
  right: 8px;
  margin-top: 1px;
}

.numUsesCircle {
  height: 20px;
  width: 20px;
  background-color: #eee;
  border-radius: 50%;
  border: 3px solid var(--near-black);
}

.border1 {
  border-color: deepskyblue;
  box-shadow: 0 0 3px 3px deepskyblue;
}

.border2 {
  border-color: red;
  box-shadow: 0 0 3px 3px red;
}

.border3 {
  border-color: var(--primary);
  box-shadow: 0 0 3px 3px var(--primary);
}

.border4 {
  border-color: gray;
  box-shadow: 0 0 3px 3px gray;
}

.border5 {
  border-color: tan;
  box-shadow: 0 0 5px 5px tan;
}

.border6 {
  border-color: chartreuse;
  box-shadow: 0 0 3px 3px chartreuse;
}

.border7 {
  border-color: purple;
  box-shadow: 0 0 5px 5px purple;
}

.border8 {
  box-shadow: 0 0 0 2px var(--primary);
}

.subCard {
  width: 100%;
  position: absolute;
  left: 0px;
  right: 0px;
}

@media (orientation: portrait) {
  .normalSize {
    max-height: 14vw;
    max-width: 14vw;
    max-height: 14dvw;
    max-width: 14dvw;
  }

  .biggerSize {
    height: 7em;
    width: 7em;
    aspect-ratio: 1;
  }

  .isBroken {
    background-position: 1em -0.5em;
  }

  .onChain {
    background-position: 0em -2.5em;
  }
}

